--- a/css/styles.css
+++ b/css/styles.css
@@ -20,8 +20,31 @@ padding:10px;
 font-size: 25px;
 }
 section{
-
+    padding:20px;
+    background-image: url("../images/people.jpg");
+    overflow: hidden;
 }
 .formContainer{
-
+    max-width: 230px;
+    background-color: #ffffffbb;
+    padding: 20px;
+    float: right;
+}
+h2{
+    font-size: 15px;
+}
+.mb{
+    margin-bottom: 15px;
+}
+input, select{
+    width: 100%;
+    box-sizing: border-box;
+    padding:10px;
+    border: none;
+    margin-bottom: 10px;
+}
+input[type="submit"]{
+    color: white;
+    background-color: #48c5ce;
+    font-weight: bold;
 }
