--- a/css/styles.css
+++ b/css/styles.css
@@ -48,3 +48,34 @@ input[type="submit"]{
     background-color: #48c5ce;
     font-weight: bold;
 }
+select{
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    background-image: url("../images/arrow.jpg");
+    background-repeat: no-repeat;
+    background-position: calc(100% - 10px) center;
+}
+footer{
+    background-color: #202121;
+    padding: 40px;
+    text-align: center;
+}
+.picture{
+    width: 160px;
+}
+.description{
+    display: inline-block;
+    color: white;
+    text-align: left;
+    max-width: 40%;
+    margin-left: 40px;
+}
+.description p, .description h3{
+margin-bottom: 20px;
+
+}
+.description h3{
+    margin-top: 0;
+    font-size: 24px;
+}
